fixed whitespace on right

--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -1,13 +1,21 @@
-html {
-  box-sizing: border-box;
-}
-
 * {
   box-sizing: border-box;
 }
 
+html,
 body {
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+body {
   font-family: 'AirbnbCereal';
   font-weight: 500;
 }
